Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125987

PickResult QML Type documentation no longer generated

    XMLWordPrintable

Details

    • 73e6896fa (dev), 9e9664d03 (6.8)
    • DaVinci 99

    Description

      In Qt 6.7 PickResult is documented in https://doc-snapshots.qt.io/qt6-6.7/qml-qtquick3d-pickresult.html

      In 6.8, the documentation does not exist

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            veshivas Venugopal Shivashankar
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes