Doc: Fix references to pickResult return type

The pickResult is now a QML value type, resulting
in renaming the type (with samller "p" instead of
capital "P"). All references to this type should
also use the new name, so that qdoc can link to the
correct documentation.

Fixes: QTBUG-125987
Pick-to: 6.8
Change-Id: Icb81682b1dd00af27c2f8a36d5a7d619240e7975
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>